--- a/RPA_envio_de_relatorios_base_de_dados_gmail.ipynb
+++ b/RPA_envio_de_relatorios_base_de_dados_gmail.ipynb
@@ -6,15 +6,11 @@
    "source": [
     "# RPA com Python\n",
     "\n",
-    "- O que é RPA?\n",
-    "- Por que isso é diferente de Selenium/Web-Scraping e do que vimos até agora?\n",
-    "    - Pontos Positivos\n",
-    "    - Pontos Negativos\n",
     "- Biblioteca usada:\n",
     "    - pip install pyautogui\n",
     "    - https://pyautogui.readthedocs.io/en/latest/\n",
     "        - Para os comandos de imagem pode ser que seja necessário instalar pip install pillow\n",
-    "        - Para resolver problemas de caracteres especiais vamos usar um macete com a pyperclip\n",
+    "        - Para resolver problemas de caracteres especiais usar um macete com a pyperclip\n",
     "        \n",
     "- Link com um resumo dos principais comandos: https://pyautogui.readthedocs.io/en/latest/quickstart.html"
    ]
@@ -25,8 +21,8 @@
    "source": [
     "## Desafio\n",
     "\n",
-    "- Vamos automatizar a extração de informações de um sistema e envio de um relatório por e-mail\n",
-    "- No nosso caso, para todo mundo conseguir fazer o mesmo programa, o nosso \"sistema\" vai ser o Gmail, mas o mesmo processo pode ser feito com qualquer programa do seu computador e qualquer sistema\n",
+    "- Automatizar a extração de informações de um sistema e envio de um relatório por e-mail\n",
+    "- No caso o programa \"sistema\" vai ser o Gmail, mas o mesmo processo pode ser feito com qualquer programa do seu computador e qualquer sistema\n",
     "    - Passo 1: Entrar no sistema (entrar no Gmail)\n",
     "    - Passo 2: Entrar em uma aba específica do sistema onde tem o nosso relatório (Aba Contatos)\n",
     "    - Passo 3: Exportar o Relatório (Exportar Contatos)\n",
